# sozo_bak

./: README.md  TODO.md  pyproject.toml
scripts/: compile_proto.sh
src/: run.py  run_dev.py  schema.py
src/ipc/: __init__.py  base_pubsub.py  pub.py  pubsub.py  serializer.py  sub.py  zmq_pubsub.py
src/ipc/msg_types/: __init__.py  monitor_msg.proto  monitor_msg_pb2.py  monitor_msg_pb2.pyi  wrappers.py
src/local/: app.py
src/web/: app.py  constants.py  router.py  routes.py  store.py
src/web/static/js/: index.js
src/web/templates/: index.html
