[project]
name = "sozo"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
   "fastapi>=0.115.4",
   "jinja2>=3.1.4",
   "msgspec>=0.18.6",
   "pyzmq>=26.2.0",
   "uvicorn[standard]>=0.32.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
ignore = ["B905", "D417", "E501", "PLR0913"]

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"
